# hex-gui

./: .gitignore  LICENSE  README.md  console.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: gs_usb_usb_communication_cn.md  gs_usb_usb_communication_en.md  smartknob.md
public/tutorial/: README.md
src/: App.css  App.tsx  api.ts  format.ts  i18n.tsx  main.tsx  tags.tsx  types.ts  useDamiaoTelemetry.ts  useRollerCanControlTelemetry.ts  useTelemetry.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  backend.rs  commands.rs  damiao.rs  device_registry.rs  diag.rs  dto.rs  hopea3.rs  imu.rs  lib.rs  lift.rs  logging.rs  main.rs  rollercan.rs  rollercan_control.rs  sdo_client.rs  smartknob.rs  state.rs  zenoh_arm.rs  zenoh_base.rs  zenoh_config.rs  zenoh_ee.rs
src/components/: ArmPanel.tsx  ArmViewer.tsx  BasePoseViewer.css  BasePoseViewer.tsx  CanAnalyzerPanel.css  CanAnalyzerPanel.tsx  ChangeIdTool.tsx  ConnectBar.tsx  ControlPanel.tsx  DamiaoLiveChart.tsx  DamiaoMotorPanel.css  DamiaoMotorPanel.tsx  DiagnosticsPanel.tsx  Hopea3Panel.tsx  LiftPanel.css  LiftPanel.tsx  LiveChart.tsx  LivePanel.tsx  MachineViewer.tsx  MotorDetail.tsx  RobotConsole.tsx  RollerCanControlChart.tsx  RollerCanControlPanel.css  RollerCanControlPanel.tsx  RollerCanPanel.css  RollerCanPanel.tsx  Sidebar.tsx  SmartKnobPanel.tsx  Tutorial.tsx  ZenohPanel.css  ZenohPanel.tsx  ZeroTool.tsx
