[package]
name = "hex-motor-gui"
version = "0.1.0"
edition = "2021"
description = "Tauri GUI for the hex-motor CiA402 driver."
license = "MIT OR Apache-2.0"

[lib]
name = "hex_motor_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
chrono = "0.4"
hex-motor = { path = "../../hex-motor" }

# The `gs_usb` backend (candleLight over USB, CAN-FD) is cross-platform, so
# it's enabled on every target. On Linux we additionally build `socketcan`.
# Adding another backend is a single arm in src/backend.rs; the rest of the
# GUI keeps holding an `Arc<dyn CanBus>` and never knows the difference.
[target.'cfg(target_os = "linux")'.dependencies]
can-transport = { path = "../../can-transport", features = ["socketcan", "gs_usb"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
can-transport = { path = "../../can-transport", features = ["gs_usb"] }

# hex-motor / canopen-sdo pull `can-transport` and `canopen-sdo` from crates.io,
# but the GUI uses the local path checkouts. Without this patch Cargo links two
# separate copies of each crate, so their `CanBus` traits become distinct types
# and `Cia402Manager::new(bus, ...)` fails to typecheck. The patch redirects the
# registry references onto the same local paths, unifying the graph.
[patch.crates-io]
can-transport = { path = "../../can-transport" }
canopen-sdo = { path = "../../canopen-sdo" }
